# hdrcam

./: .gitignore  build.gradle  readme.md  settings.gradle
cameraengine/: build.gradle  proguard-rules.pro
cameraengine/src/main/: AndroidManifest.xml
cameraengine/src/main/cpp/: CMakeLists.txt  LOG.h  LOG_x86.h  fast_img_conversion.cpp  fast_img_conversion.h  imgconversionJNI.cpp  imgconversionJNI.h  rgb2yuv.cpp  yuv2rgb.cpp
cameraengine/src/main/java/com/hdrcam/camera/: ImageProcessingListener.java
cameraengine/src/main/java/com/hdrcam/camera/activity/: GLActivity.java
cameraengine/src/main/java/com/hdrcam/camera/capture/: FrameHandler.java  PreviewImageListener.java  SavedImageListener.java  VideoCameraPreview.java
cameraengine/src/main/java/com/hdrcam/camera/render/: DispatchingReviewRenderer.java  GLESUtils.java  OverlayView.java  PreviewRenderer.java
cameraengine/src/main/java/com/hdrcam/camera/utils/: CamStateCallback.java  Constants.java  ExImageFormat.java  ImageData.java  ImgUtils.java  NativeConversion.java  RawImageData.java  RenderScriptHelper.java  ShortImageData.java  UIUtils.java
cameraengine/src/main/java/com/hdrcam/camera/utils/gles/: EglCore.java  EglSurfaceBase.java  FlatShadedProgram.java  GlUtil.java  OffscreenSurface.java  WindowSurface.java
cameraengine/src/main/java/com/hdrcam/camera/utils/gles/drawable/: Drawable2d.java  Drawable2dFull.java
cameraengine/src/main/java/com/hdrcam/camera/utils/gles/program/: Program.java  ProgramTexture2d.java  ProgramTextureOES.java  TextureNVProgram.java  TextureProgram.java  TextureYUV420Program.java
cameraengine/src/main/res/layout/: activity_gl.xml  activity_main.xml
cameraengine/src/main/res/values/: strings.xml  styles.xml
cameraengine/src/main/rs/: i420_1ch_rgba.rs  i420_1ch_rgba_uv_predefined.rs  i420_rgba.rs  invert.rs  nv12_rgba_backup.rs  rgba2i420.rs  rgba_to_i420.rs  rgba_to_yuv.rs  yuv420888_rgba.rs  yuv_to_rgba.rs
lowlightapp/: build.gradle
lowlightapp/includes/ATen/: CPUFunctions.h  Config.h  DefaultBackendFunctions.h  Functions.h  MathFunctions.h  MetaFunctions.h  NativeFunctions.h  RedispatchFunctions.h  RegistrationDeclarations.h
lowlightapp/includes/ATen/core/: TensorBody.h
lowlightapp/includes/caffe2/core/: macros.h
lowlightapp/src/main/: AndroidManifest.xml
lowlightapp/src/main/assets/: hdrnet_scripted.pt  hdrnet_scripted_no_opt.pt  scripted.pt
lowlightapp/src/main/java/com/hdrcam/lowlight/: CameraActivity.java  LowLightSDK.java  MainActivity.java  SplashScreen.java
lowlightapp/src/main/java/com/hdrcam/utils/: ImageUtils.java  TouchImageView.java
lowlightapp/src/main/jni/: CMakeLists.txt  jni_interface.cpp  lowlight.cpp  lowlight.h
lowlightapp/src/main/res/drawable/: ic_baseline_highlight_24_disable.xml  ic_baseline_replay_24_disable.xml  ic_capture.xml  ic_rotate_camera.xml  splash_screen_background.xml
lowlightapp/src/main/res/layout/: activity_camera.xml  activity_main.xml  app_bar.xml
lowlightapp/src/main/res/menu/: menu_main.xml
lowlightapp/src/main/res/values/: colors.xml  strings.xml  styles.xml
